--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -17,5 +17,5 @@
     "require": ["tsconfig-paths/register"]
   },
   "files": ["src/type.d.ts"],
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "src/**/**/*"]
 }
