--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.6.2",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
@@ -33,9 +35,12 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.14",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.5.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.2",
+    "yup": "^1.2.0"
   }
 }
