--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT = "8088"
-
 MONGOOSE_URI = "mongodb+srv://duoctran2527:duoctran2527@cluster0.bwthtxg.mongodb.net/"
-
-TOKEN = "44444"
+CLOUD_NAME= dtprndze9
+API_KEY = 226592781832287
+API_SECRET = Pwd2rtczKrsbphl76UDN35qyaCs
