--- a/backend/package.json
+++ b/backend/package.json
@@ -35,12 +35,16 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.14",
+    "@types/multer": "^1.4.7",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "yup": "^1.2.0"
   }
 }
