--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.4",
     "@types/cors": "^2.8.14",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
