base setup add friend module

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ MONGOOSE_URI = "mongodb+srv://duoctran2527:duoctran2527@cluster0.bwthtxg.mongodb
 CLOUD_NAME= dtprndze9
 API_KEY = 226592781832287
 API_SECRET = Pwd2rtczKrsbphl76UDN35qyaCs
+TOKEN_SECRET_KEY = "this is token key"
