--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,9 @@
     "@typescript-eslint/parser": "^6.7.0",
     "eslint": "^8.49.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.1",
@@ -38,8 +40,8 @@
     "@types/cors": "^2.8.14",
     "@types/multer": "^1.4.7",
     "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.6",
     "cloudinary": "^1.41.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
