--- a/backend/package.json
+++ b/backend/package.json
@@ -49,6 +49,7 @@
     "mongoose": "^7.5.2",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "socket.io": "^4.7.2",
     "yup": "^1.2.0"
   }
 }
